EEVEE: Black environment pass when 'Transparency' is enabled #77686

Closed
opened 2020-06-09 15:16:15 +02:00 by Jeran · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: N/A

Short description of error
Cannot use environment passes for compositing. Either its blocked by the alpha of the combined pass, or its completely black if you render with transparency. You simply cannot do anything with it unless you want to render JUST the environment with holdouts. Ideally it should work like in cycles otherwise, Honestly I don't see the purpose.
Blender_ [D__Blender Resources_!Projects_BBR_electron rubs.blend] 2020-06-09 15-22-47.mp4

Exact steps for others to reproduce the error

  • Check Environment pass.
  • Enable transparency
  • Render (Environment pass is black and null).
  • Now disable transparency
  • Render (Environment pass has black holdouts and cannot be composited under the combined/image pass).
    env_pass_transp_bug.blend
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 965M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: N/A **Short description of error** Cannot use environment passes for compositing. Either its blocked by the alpha of the combined pass, or its completely black if you render with transparency. You simply cannot do anything with it unless you want to render JUST the environment with holdouts. Ideally it should work like in cycles otherwise, Honestly I don't see the purpose. [Blender_ [D__Blender Resources_!Projects_BBR_electron rubs.blend] 2020-06-09 15-22-47.mp4](https://archive.blender.org/developer/F8603924/Blender___D__Blender_Resources__Projects_BBR_electron_rubs.blend__2020-06-09_15-22-47.mp4) **Exact steps for others to reproduce the error** - Check Environment pass. - Enable transparency - Render (Environment pass is black and null). - Now disable transparency - Render (Environment pass has black holdouts and cannot be composited under the combined/image pass). [env_pass_transp_bug.blend](https://archive.blender.org/developer/F8606464/env_pass_transp_bug.blend)
Author

Added subscriber: @TheJeran

Added subscriber: @TheJeran
Germano Cavalcante changed title from EEVEE Environment Pass doesn't serve a practical function. In contrast with Cycles. to EEVEE: Black environment pass when 'Transparency' is enabled 2020-06-10 20:09:02 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-06-16 10:26:31 +02:00
Member

Thanks for the report, yes environment renderpass should follow cycles.

Thanks for the report, yes environment renderpass should follow cycles.

This issue was referenced by ba2c039b05

This issue was referenced by ba2c039b05a84de1dccbeef71b8b2ac89a072869
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @brurpo

Added subscriber: @brurpo

Hi there. Is this broken again?
using blender 3.3 stable with geometry nodes.

image.png

Hi there. Is this broken again? using blender 3.3 stable with geometry nodes. ![image.png](https://archive.blender.org/developer/F13561679/image.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77686
No description provided.