source/blender/gpu/shaders/material/gpu_shader_material_output_world.glsl
@@ -3,8 +3,9 @@ uniform float backgroundAlpha;
 void node_output_world(Closure surface, Closure volume, out Closure result)
 {
 #ifndef VOLUMETRICS
-  result.radiance = surface.radiance * backgroundAlpha;
-  result.transmittance = vec3(1.0 - backgroundAlpha);
+  float alpha = renderPassEnvironment ? 1.0 : backgroundAlpha;
+  result.radiance = surface.radiance * alpha;
+  result.transmittance = vec3(1.0 - alpha);
 #else
   result = volume;
 #endif /* VOLUMETRICS */
